Closed
Bug 408812
Opened 18 years ago
Closed 18 years ago
AIX Compilation error for trunk build source nsThebesRegion.cpp : ./dist/include/gfx/nsRegion.h", line 85.18: 1540-0723 (S) The inline function "void operator delete(void *, size_t)" is referenced, but it is not defined.
Categories
(Core Graveyard :: GFX, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9beta3
People
(Reporter: shailen.n.jain, Assigned: shailen.n.jain)
Details
Attachments
(1 file, 2 obsolete files)
|
1.98 KB,
patch
|
vlad
:
review+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.11) Gecko/20071127 Firefox/2.0.0.11
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.11) Gecko/20071127 Firefox/2.0.0.11
While compiling trunk build on AIX, getting below compilation error -
"../../../dist/include/gfx/nsRegion.h", line 85.18: 1540-0723 (S) The inline function "void operator delete(void *, size_t)" is referenced, but it is not defined.
The nsRegion::RgnRect::operator delete is defined in nsRegion.cpp and it is being being referenced in nsThebesRegion.cpp. The sThebesRegion.cpp does inlcude the "nsThebesRegion.h" which inturn includes "nsRegion.h", not able to find the function definition for nsRegion::RgnRect::operator delete.
Reproducible: Always
Steps to Reproduce:
1.Build Mozilla Firefox Trunk build on AIX with Gnome 2.12 RPMS of 64 bit
version.
2.
3.
Actual Results:
Build fails with the above error.
Expected Results:
No build failure
Updated•18 years ago
|
Version: unspecified → Trunk
Moving the inline function definition for
1. nsRegion::RgnRect::operator delete
2. nsRegion::RgnRect::operator new
from nsRegion.cpp to nsRegion.h
Also the above change resulting in moving the class declaration for RgnRectMemoryAllocator from nsRegion.cpp to nsRegion.h.
Attachment #293657 -
Flags: review?(benjamin)
Small correction (in the comments for the code)for the previous attachment
Attachment #293657 -
Attachment is obsolete: true
Attachment #293659 -
Flags: review?(benjamin)
Attachment #293657 -
Flags: review?(benjamin)
Comment 3•18 years ago
|
||
Comment on attachment 293659 [details] [diff] [review]
Patch V2
I am not a gfx peer. Seems to me that it might be better to make operator new/delete not inline at all.
Attachment #293659 -
Flags: review?(benjamin) → review?(vladimir)
Removing inline keyword for new/delete seem to be working fine.
Attachment #293659 -
Attachment is obsolete: true
Attachment #293811 -
Flags: review?(vladimir)
Attachment #293659 -
Flags: review?(vladimir)
Comment on attachment 293811 [details] [diff] [review]
Patch V3
That's fine; I'm pretty sure 'inline' is bogus there anyway.
Attachment #293811 -
Flags: review?(vladimir) → review+
Attachment #293811 -
Flags: superreview?(roc)
Comment 6•18 years ago
|
||
Comment on attachment 293811 [details] [diff] [review]
Patch V3
vlad's r= is enough, as per recent commits (http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fgfx&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=month&mindate=&maxdate=&cvsroot=%2Fcvsroot), especially for a build fix.
Attachment #293811 -
Flags: superreview?(roc) → approval1.9?
Updated•18 years ago
|
Assignee: nobody → shailen.n.jain
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•18 years ago
|
Status: NEW → ASSIGNED
Component: Build Config → GFX
Product: Firefox → Core
QA Contact: build.config → general
Comment 7•18 years ago
|
||
Comment on attachment 293811 [details] [diff] [review]
Patch V3
a=beltzner for 1.9
Attachment #293811 -
Flags: approval1.9? → approval1.9+
Updated•18 years ago
|
Keywords: checkin-needed
Comment 8•18 years ago
|
||
Checking in gfx/public/nsRegion.h;
/cvsroot/mozilla/gfx/public/nsRegion.h,v <-- nsRegion.h
new revision: 1.8; previous revision: 1.7
done
Checking in gfx/src/nsRegion.cpp;
/cvsroot/mozilla/gfx/src/nsRegion.cpp,v <-- nsRegion.cpp
new revision: 1.23; previous revision: 1.22
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•