Bug 408812 - "AIX Compilation error for trunk build source nsThebesRegion.cpp : ./dist/include/gfx/nsRegion.h", line 85.18: 1540-0723 (S) The inline function "void operator delete(void *, size_t)" is referenced, but it is not defined" [p=shailen.n.jain@gmail.com (Shailen) r=vlad a1.9=beltzner]